[package]
name = "feedreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"

tokio = { version = "1", features = ["full"] }
futures = "0.3.19"
rweb = "0.15"
askama = { version = "0.11.0", features = ["with-warp", "mime", "mime_guess"] }
askama_warp = "0.12.0"
rusqlite = { version = "0.27.0", features = ["chrono", "bundled"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2.1"
feed-rs = "1.0.0"
opml = "1.1.3"
reqwest = "0.11.8"
regex = "1"
lazy_static = "1"
base64 = "0.13.0"
anyhow = "1.0.53"
