[package]
name = "feedreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["signal"] }
futures = "0.3.19"
axum = { version = "0.7", features = ["http2"] }
tower-http = { version = "0.5", features = ["cors", "trace"]}
askama = { version = "0.12", features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.4"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2.1"
feed-rs = "1.0.0"
opml = "1.1.3"
reqwest = { version = "0.11.8", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
regex = "1"
lazy_static = "1"
base64 = "0.13.0"
anyhow = "1.0.53"
libsql = "0.3.5"
