[package]
name = "feedreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["signal"] }
futures = "0.3.31"
axum = { version = "0.8", features = ["http2"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
askama = { version = "0.14" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2.3"
feed-rs = "2.3.1"
opml = "1.1.6"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
] }
regex = "1"
lazy_static = "1"
base64 = "0.22.1"
anyhow = "1.0.98"
libsql = "0.9.11"
